# kinect_v2

./: CMakeLists.txt  logfile
lib/: libfreenect2-openni2.so.0  libfreenect2.so.0.2.0
src/: Protonect.cpp
