CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.1)
PROJECT(kinect_v2)


SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE( PCL REQUIRED )

ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

FIND_PACKAGE(freenect2 REQUIRED)
INCLUDE_DIRECTORIES(${freenect2_INCLUDE_DIR})
LINK_LIBRARIES(${freenect2_LIBRARIES})

ADD_EXECUTABLE(Protonect src/Protonect.cpp)

TARGET_LINK_LIBRARIES(Protonect
  ${freenect2_LIBRARIES}
	 ${PCL_LIBRARIES}

)
